# papersift

./: .gitignore  README.md  TUTORIAL.md  pyproject.toml  requirements-ui.txt
.claude-plugin/: marketplace.json  plugin.json
domains/: ai_foundation.yaml  amr.yaml  gut_microbiome.yaml  neuroscience_memory.yaml
outputs/: MANIFEST.yaml  bridge_eval_rubric.json
outputs/e002/: EXECUTIVE_SUMMARY.md  e002_report.md  filter_patterns.json  fulltext_coverage.json
outputs/e002_v2/: CHANGES.md  EXECUTIVE_SUMMARY.md  filter_patterns.json  fulltext_coverage.json
outputs/e004/: expand_citations.py  expand_citations_v2.py  lookup_openalex_ids.py  measure_stability.py  measure_stability_v2.py  merge_and_cluster_v2.py  merge_results.py  seeds.json  seeds_v2.json  select_seeds.py  (+4 more)
scripts/: e002_analysis_summary.py  e002_fulltext_coverage.py  e006_ab_comparison.py  e006_fetch_pmc_xml.py  e006_fulltext_coverage.py  e007_full_extraction.py  e009_abstract_entity_experiment.py  e010_resolution_jaccard.py  e011_dampening.py  e012_schema_pilot.py  e013_composability_temporal.py  e014_temporal_v2.py  e015_knowledge_frontier_v1.py  e016_extended_extraction.py  e017_failure_signal.py  e018_bridge_recommendation.py  e019_template_dedup.py  e020_gap_score_embedding.py  e021_zscore_novelty.py  e022_citation_intent.py  e023_kleinberg_burst.py  e024_semantic_theme_cluster.py  e025_bridge_score_redesign.py  e029_3way_comparison.py  e029_regression.py  e029_rho_gate.py  e030_vocab_comparison.py  e031_p0_compare.py  e031_phase_b_validation.py  e031_phase_c_validation.py  e031_phase_d_smoke_test.py  e031_regen_eval.py  fetch_abstracts.py  generate_landscape_report.py
tests/: __init__.py  conftest.py  test_abstract.py  test_analysis_v11.py  test_bridge_recommend.py  test_cli_composable.py  test_clustering_quality.py  test_doi_normalization.py  test_e2e_workflow.py  test_embedding.py  test_enrich.py  test_extract.py  test_frontier.py  test_fulltext.py  test_papersift.py  test_research.py  test_topics_compatibility.py  test_views.py
(+357 files in other folders)
